--- a/conf.conf
+++ b/conf.conf
@@ -13,3 +13,29 @@ location / {
         }
 }
 
+server {
+        server_name app.nearcashback.com;
+        root /home/ueprod/claim-app/build;
+        index index.html;
+
+location / {
+                proxy_pass http://127.0.0.1:3000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+        }
+}
+
+
+server {
+        server_name app.nearcashback.com;
+        root /home/ueprod/claim-app/build;
+        index index.html;
+        listen 80;
+
+        location / {
+        }
+}
+
